# lib-ledger-core

./: .clang-format
.circleci/: config.yml  setup_debian.sh
core/idl/wallet/algorand/: idl.djinni
core/src/api/: AlgorandAccount.hpp
core/src/database/: migrations.cpp
core/src/jni/jni/: Account.cpp  AlgorandAccount.cpp  AlgorandAssetAmount.hpp  AlgorandAssetAmountMapCallback.hpp  AlgorandAssetParams.hpp  AlgorandAssetParamsMapCallback.hpp  AlgorandAssetTransferInfo.hpp  AlgorandBlockchainObserverEngines.cpp  AlgorandConfigurationDefaults.hpp  AlgorandOperation.cpp  AlgorandPaymentInfo.hpp  AlgorandTransaction.cpp  BitcoinLikeAccount.cpp  CosmosGasLimitRequest.hpp
core/src/wallet/algorand/: AlgorandAccount.cpp  AlgorandAccount.hpp  AlgorandAccountSynchronizer.cpp  AlgorandAddress.cpp  AlgorandAddress.hpp  AlgorandBlockchainExplorer.cpp  AlgorandWallet.cpp
core/test/algorand/: AlgorandAccountTests.cpp  AlgorandDatabaseTests.cpp  AlgorandSynchronizationTests.cpp
ledger-core/: CMakeLists.txt
ledger-core-algorand/idl/: idl.djinni
ledger-core-algorand/inc/algorand/: AlgorandAccount.hpp  AlgorandAccountSynchronizer.hpp  AlgorandAddress.hpp  AlgorandBlockchainExplorer.hpp  AlgorandBlockchainObserver.hpp  AlgorandExplorerConstants.hpp  AlgorandJsonParser.hpp  AlgorandJsonParsers.hpp
ledger-core-algorand/inc/algorand/database/: AlgorandAccountDatabaseHelper.hpp  AlgorandBlockDatabaseHelper.hpp  AlgorandOperationDatabaseHelper.hpp  AlgorandTransactionDatabaseHelper.hpp  Migrations.hpp
ledger-core-algorand/inc/algorand/model/transactions/: AlgorandAssetParams.hpp  AlgorandExplorerTransaction.hpp  AlgorandTransaction.hpp
ledger-core-algorand/src/algorand/: AlgorandAccount.cpp  AlgorandAccountSynchronizer.cpp  AlgorandAddress.cpp  AlgorandBlockchainExplorer.cpp  AlgorandBlockchainObserver.cpp  AlgorandLikeCurrencies.cpp  AlgorandWallet.cpp  AlgorandWalletFactory.cpp
ledger-core-algorand/src/algorand/database/: AlgorandAccountDatabaseHelper.cpp  AlgorandBlockDatabaseHelper.cpp  AlgorandTransactionDatabaseHelper.cpp  Migrations.cpp
ledger-core-algorand/src/algorand/transactions/util/: TransactionAdaptor.hpp
ledger-core-algorand/test/: AlgorandAddressTests.cpp  AlgorandExplorerTests.cpp  AlgorandSynchronizationTests.cpp  AlgorandTestFixtures.hpp
ledger-core-cosmos/: CMakeLists.txt
ledger-core-cosmos/idl/: addresses.djinni  idl.djinni  messages.djinni  wallet.djinni
ledger-core-cosmos/inc/cosmos/: CosmosLikeAccount.hpp  CosmosLikeAddress.hpp  CosmosLikeConstants.hpp  CosmosLikeExtendedPublicKey.hpp  CosmosLikeMessage.hpp  CosmosLikeOperationQuery.hpp  CosmosLikeWallet.hpp  CosmosNetworks.hpp  cosmos.hpp
ledger-core-cosmos/inc/cosmos/api_impl/: CosmosLikeBlockApi.hpp  CosmosLikeOperation.hpp  CosmosLikeTransactionApi.hpp
ledger-core-cosmos/inc/cosmos/bech32/: CosmosBech32.hpp
ledger-core-cosmos/inc/cosmos/database/: CosmosLikeAccountDatabaseHelper.hpp  CosmosLikeOperationDatabaseHelper.hpp  CosmosLikeTransactionDatabaseHelper.hpp  Migrations.hpp  SociCosmosAmount.hpp
ledger-core-cosmos/inc/cosmos/explorers/: CosmosLikeBlockchainExplorer.hpp  GaiaCosmosLikeBlockchainExplorer.hpp  NodeCosmosLikeBlockchainExplorer.hpp  RpcsParsers.hpp
ledger-core-cosmos/inc/cosmos/factories/: CosmosLikeWalletFactory.hpp
ledger-core-cosmos/inc/cosmos/keychains/: CosmosLikeKeychain.hpp
ledger-core-cosmos/inc/cosmos/observers/: CosmosLikeBlockchainObserver.hpp
ledger-core-cosmos/inc/cosmos/synchronizers/: CosmosLikeAccountSynchronizer.hpp  CosmosLikeBlockchainExplorerAccountSynchronizer.hpp
ledger-core-cosmos/inc/cosmos/transaction_builders/: CosmosLikeTransactionBuilder.hpp
ledger-core-cosmos/src/: CMakeLists.txt
ledger-core-cosmos/src/cosmos/: CosmosLikeAccount.cpp  CosmosLikeAddress.cpp  CosmosLikeCurrencies.cpp  CosmosLikeExtendedPublicKey.cpp  CosmosLikeMessage.cpp  CosmosLikeOperationQuery.cpp  CosmosLikeWallet.cpp
ledger-core-cosmos/src/cosmos/api_impl/: CosmosLikeOperation.cpp  CosmosLikeTransactionApi.cpp
ledger-core-cosmos/src/cosmos/bech32/: Bech32Factory.cpp  Bech32Parameters.cpp  CosmosBech32.cpp
ledger-core-cosmos/src/cosmos/config/: Networks.cpp
ledger-core-cosmos/src/cosmos/database/: CosmosLikeAccountDatabaseHelper.cpp  CosmosLikeOperationDatabaseHelper.cpp  CosmosLikeTransactionDatabaseHelper.cpp  Migrations.cpp  SociCosmosAmount.cpp
ledger-core-cosmos/src/cosmos/explorers/: GaiaCosmosLikeBlockchainExplorer.cpp  NodeCosmosLikeBlockchainExplorer.cpp
ledger-core-cosmos/src/cosmos/factories/: CosmosLikeWalletFactory.cpp
ledger-core-cosmos/src/cosmos/keychains/: CosmosLikeKeychain.cpp
ledger-core-cosmos/src/cosmos/observers/: CosmosLikeBlockchainObserver.cpp
ledger-core-cosmos/src/cosmos/synchronizers/: CosmosLikeAccountSynchronizer.cpp  CosmosLikeBlockchainExplorerAccountSynchronizer.cpp
ledger-core-cosmos/src/cosmos/transaction_builders/: CosmosLikeTransactionBuilder.cpp
ledger-core-cosmos/test/: CMakeLists.txt  Fixtures.cpp  Fixtures.hpp  address_test.cpp  db_test.cpp  main.cpp  synchronization_test.cpp  transactions_test.cpp
ledger-core-cosmos/test/integration/: cosmos_synchronization.cpp  cosmos_transaction.cpp
ledger-core/idl/: configuration.djinni
ledger-core/inc/core/bytes/: BytesWriter.hpp
ledger-core/inc/core/collections/: DynamicArray.hpp  DynamicObject.hpp  Vector.hpp
ledger-core/inc/core/math/bech32/: Bech32.hpp  (+1 more)
ledger-core/inc/core/operation/: OperationQuery.hpp
ledger-core/lib/: CMakeLists.txt
ledger-core/lib/sqlcipher/: CMakeLists.txt
ledger-core/src/: CMakeLists.txt
ledger-core/src/core/collections/: DynamicArray.cpp  DynamicObject.cpp
ledger-core/test/collections/: DynamicsTests.cpp
